<resources>
    <string name="tfe_ic_app_name" translation_description="Image Classification demo app [CHAR_LIMIT=40]">ZooApp</string>
    <string name="tfe_ic_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="tfe_ic_gpu_quant_error" translation_description="Error regarding GPU support for Quant models[CHAR_LIMIT=60]">GPU does not yet supported quantized models.</string>
    <string name="tfe_ic_model" translatable="false">Model:</string>
    <string-array name="tfe_ic_models" translatable="false">
        <item>Quantized_EfficientNet</item>
        <item>Float_EfficientNet</item>
        <item>Quantized_MobileNet</item>
        <item>Float_MobileNet</item>
    </string-array>

    <string name="tfe_ic_device" translatable="false">Device:</string>
    <string-array name="tfe_ic_devices" translatable="false">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
    <string name="title_activity_main">ZooApp</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">dp44PeYDdeCh1L3puOb0HyFywGUE3j2PTPZyvtId</string>
    <string name="back4app_client_key">QdyQ0Wg0h8WH72Vy7gYQ3oL8a9O71S0IyEpkMkmP</string>

    <string name="opis"><b>Opis:</b></string>
    <string name="porodica"><b>Porodica: </b></string>
    <string name="zivotniVek"><b>Životni vek: </b></string>
    <string name="staniste"><b>Stanište: </b></string>
    <string name="rasprostranjenost"><b>Rasprostranjenost: </b></string>


</resources>
