<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tfe_color_primary"
    tools:context=".SaznajViseActivity">

    <RelativeLayout
        android:id="@+id/layoutZivotinja"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNaziv"
            android:textSize="35dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/roza"
            android:text="Naziv životinje"/>

        <ImageButton
            android:id="@+id/imgSlika"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_below="@+id/txtNaziv"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="1dp"
            android:background="@color/tfe_color_primary"
            />

        <TextView
            android:id="@+id/txtPorodica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgSlika"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/porodica"
            android:textColor="@color/crna"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtZivotniVek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPorodica"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:text="@string/zivotniVek"
            android:textColor="@color/crna"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtStaniste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtZivotniVek"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:text="@string/staniste"
            android:textColor="@color/crna"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtRasprostranjenost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtStaniste"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:text="@string/rasprostranjenost"
            android:textColor="@color/crna"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtTekst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRasprostranjenost"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:text="@string/opis"
            android:textColor="@color/crna"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtTekst2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTekst"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:text="Tekst opisa "
            android:textColor="@color/siva"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/txtZanimljivost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTekst2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:text="Da li ste znali? "
            android:textColor="@color/crna"
            android:textStyle="italic|bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtZanimljivost2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtZanimljivost"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:text="Tekst zanimljivosti "
            android:textColor="@color/siva"
            android:textStyle="italic"
            android:textSize="19sp" />


        <!--Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNazad"
            android:text="Nazad"
            android:layout_below="@id/txtOpis"
            /-->

    </RelativeLayout>
</ScrollView>